NATTQA-ENV/force-app/main/default/objects/nps_Invitation__c/nps_Invitation__c.object-meta.xml
<CustomObject>
    <label>Invitation</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Invitation Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invitations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>