NATTQA-ENV/force-app/main/default/objects/nps_Invitation__c/fields/nps_Account__c.field-meta.xml
<CustomField>
    <fullName>nps_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Invitations</relationshipName>
    <type>Lookup</type>
</CustomField>