NATTQA-ENV/force-app/main/default/objects/nps_Invitation__c/fields/nps_Contact__c.field-meta.xml
<CustomField>
    <fullName>nps_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Invitations</relationshipName>
    <type>Lookup</type>
</CustomField>