NATTQA-ENV/force-app/main/default/objects/nps_Invitation__c/fields/nps_Date_To_Send__c.field-meta.xml
<CustomField>
    <fullName>nps_Date_To_Send__c</fullName>
    <defaultValue>now()</defaultValue>
    <label>Date To Send</label>
    <type>DateTime</type>
</CustomField>