NATTQA-ENV/force-app/main/default/objects/nps_Invitation__c/fields/nps_Error_Count__c.field-meta.xml
<CustomField>
    <fullName>nps_Error_Count__c</fullName>
    <description>The total number of daily sync attempts that failed.</description>
    <label>Error Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>