NATTQA-ENV/force-app/main/default/objects/nps_Invitation__c/fields/nps_Feedback_Program__c.field-meta.xml
<CustomField>
    <fullName>nps_Feedback_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Feedback Program</label>
    <referenceTo>nps_Feedback_Program__c</referenceTo>
    <relationshipName>Invitations</relationshipName>
    <type>Lookup</type>
</CustomField>