NATTQA-ENV/force-app/main/default/objects/nps_Invitation__c/fields/nps_Invitation_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>nps_Invitation_Creation_Date__c</fullName>
    <description>Date when Invitation was created in NPS</description>
    <label>Invitation Creation Date</label>
    <type>DateTime</type>
</CustomField>