NATTQA-ENV/force-app/main/default/objects/nps_Invitation__c/fields/nps_Invitation_Delivered_Date__c.field-meta.xml
<CustomField>
    <fullName>nps_Invitation_Delivered_Date__c</fullName>
    <description>Date when NPS delivered Invitation to Contact</description>
    <label>Invitation Delivered Date</label>
    <type>DateTime</type>
</CustomField>