NATTQA-ENV/force-app/main/default/objects/nps_Invitation__c/fields/nps_Invitation_Payload__c.field-meta.xml
<CustomField>
    <fullName>nps_Invitation_Payload__c</fullName>
    <description>Payload that will be sent to NPS</description>
    <label>Invitation Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>