NATTQA-ENV/force-app/main/default/objects/nps_Invitation__c/fields/nps_Is_Generic__c.field-meta.xml
<CustomField>
    <fullName>nps_Is_Generic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Generic</label>
    <type>Checkbox</type>
</CustomField>