NATTQA-ENV/force-app/main/default/objects/nps_Invitation__c/fields/nps_Non_Respondents__c.field-meta.xml
<CustomField>
    <fullName>nps_Non_Respondents__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Invitations without a NPS Internal Id</description>
    <label>Non-Respondents</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Invitations1</relationshipName>
    <type>Lookup</type>
</CustomField>