NATTQA-ENV/force-app/main/default/objects/nps_Invitation__c/fields/nps_NPS_Fieldset__c.field-meta.xml
<CustomField>
    <fullName>nps_NPS_Fieldset__c</fullName>
    <description>Contains the Medallia fieldset to be processed.</description>
    <label>NPS Fieldset</label>
    <length>50</length>
    <type>Text</type>
</CustomField>