NATTQA-ENV/force-app/main/default/objects/nps_Invitation__c/fields/nps_NPS_Internal_Id__c.field-meta.xml
<CustomField>
    <fullName>nps_NPS_Internal_Id__c</fullName>
    <description>NPS Id generated within Medallia application</description>
    <externalId>true</externalId>
    <label>NPS Internal Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>