NATTQA-ENV/force-app/main/default/objects/nps_Invitation__c/fields/nps_NPS_Service__c.field-meta.xml
<CustomField>
    <fullName>nps_NPS_Service__c</fullName>
    <description>Contains the NPS service name to be processed.</description>
    <label>NPS Service</label>
    <length>50</length>
    <type>Text</type>
</CustomField>