NATTQA-ENV/force-app/main/default/objects/nps_Invitation__c/fields/nps_Reason_for_Exclusion__c.field-meta.xml
<CustomField>
    <fullName>nps_Reason_for_Exclusion__c</fullName>
    <description>Populated when Feedback_Program__c Status = Not Sampled</description>
    <label>Reason for Exclusion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>