NATTQA-ENV/force-app/main/default/objects/nps_Invitation__c/fields/nps_Received_Response__c.field-meta.xml
<CustomField>
    <fullName>nps_Received_Response__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in Process Builder - Non-respondents lookup</description>
    <label>Received Response</label>
    <type>Checkbox</type>
</CustomField>