NATTQA-ENV/force-app/main/default/objects/nps_Invitation__c/fields/nps_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>nps_Record_Id__c</fullName>
    <description>The related record that created this record</description>
    <externalId>true</externalId>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>