NATTQA-ENV/force-app/main/default/objects/nps_Invitation__c/fields/nps_Report_Id__c.field-meta.xml
<CustomField>
    <fullName>nps_Report_Id__c</fullName>
    <description>Tabular Salesforce Report Id</description>
    <label>Report Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>