NATTQA-ENV/force-app/main/default/objects/nps_Invitation__c/fields/nps_Status__c.field-meta.xml
<CustomField>
    <fullName>nps_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Sampled</fullName>
            </value>
            <value>
                <fullName>Bounced</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>API Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>